# Video-upload

./: .gitignore  .profile  .wget-hsts  README.md
.github/: SECRETS_SETUP.md
.github/workflows/: ai_code_review.yml  android_ci_cd.yml  dependabot.yml  full_ci_pipeline.yml  nightly_checks.yml
android/: .gitattributes  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/kotlin/com/visionagent/: BenchmarkSuite.kt
android/app/src/androidTest/kotlin/com/visionagent/advanced/: AdvancedScenarioTests.kt
android/app/src/androidTest/kotlin/com/visionagent/espresso/: AgentEspressoSuite.kt
android/app/src/androidTest/kotlin/com/visionagent/golden/: GoldenScreenshotTests.kt
android/app/src/androidTest/kotlin/com/visionagent/performance/: MacrobenchmarkTests.kt
android/app/src/androidTest/kotlin/com/visionagent/uiautomator/: AgentUIAutomatorSuite.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/frame_processor/: FrameProcessor.cpp  FrameProcessor.h
android/app/src/main/cpp/jni_bridge/: JNIBridge.cpp
android/app/src/main/cpp/ocr/: OCRCore.cpp  OCRCore.h
android/app/src/main/cpp/perf/: MemoryPool.cpp  MemoryPool.h
android/app/src/main/cpp/sanitizers/: sanitizer_flags.cmake
android/app/src/main/cpp/vision/: VisionCore.cpp  VisionCore.h
android/app/src/main/kotlin/com/visionagent/: VisionAgentApp.kt
android/app/src/main/kotlin/com/visionagent/core/: AgentOrchestrator.kt
android/app/src/main/kotlin/com/visionagent/core/action/: ActionEngine.kt  AgentAccessibilityService.kt
android/app/src/main/kotlin/com/visionagent/core/ai/model_manager/: ModelManager.kt
android/app/src/main/kotlin/com/visionagent/core/backup/: AutoBackupManager.kt
android/app/src/main/kotlin/com/visionagent/core/config/: ConfigEngine.kt
android/app/src/main/kotlin/com/visionagent/core/crash/: CrashReplaySystem.kt
android/app/src/main/kotlin/com/visionagent/core/crashlytics/: CrashlyticsSetup.kt
android/app/src/main/kotlin/com/visionagent/core/dashboard/: DeveloperDashboard.kt
android/app/src/main/kotlin/com/visionagent/core/debugger/: AIDebugger.kt
android/app/src/main/kotlin/com/visionagent/core/diagnostic/: SelfDiagnosticEngine.kt
android/app/src/main/kotlin/com/visionagent/core/event/: EventBus.kt
android/app/src/main/kotlin/com/visionagent/core/event_recorder/: EventRecorder.kt
android/app/src/main/kotlin/com/visionagent/core/feature/: FeatureFlagManager.kt
android/app/src/main/kotlin/com/visionagent/core/health/: HealthMonitor.kt
android/app/src/main/kotlin/com/visionagent/core/leak/: LeakDetector.kt
android/app/src/main/kotlin/com/visionagent/core/memory/: MemoryEngine.kt
android/app/src/main/kotlin/com/visionagent/core/ocr/: OCREngine.kt
android/app/src/main/kotlin/com/visionagent/core/ota/: OTAUpdateManager.kt
android/app/src/main/kotlin/com/visionagent/core/performance/: PerformanceTracker.kt
android/app/src/main/kotlin/com/visionagent/core/planner/: PlannerEngine.kt
android/app/src/main/kotlin/com/visionagent/core/plugin/: PluginSystem.kt
android/app/src/main/kotlin/com/visionagent/core/recovery/: RecoveryEngine.kt
android/app/src/main/kotlin/com/visionagent/core/report/: AutoBugReport.kt
android/app/src/main/kotlin/com/visionagent/core/rule/: RuleEngine.kt
android/app/src/main/kotlin/com/visionagent/core/screen/: FrameProcessorNative.kt  ScreenCaptureEngine.kt  ScreenCaptureService.kt
android/app/src/main/kotlin/com/visionagent/core/sdk/: PluginSDK.kt
android/app/src/main/kotlin/com/visionagent/core/security/: CertificatePinner.kt
android/app/src/main/kotlin/com/visionagent/core/vision/: VisionEngine.kt
android/app/src/main/kotlin/com/visionagent/di/: AppModule.kt
android/app/src/main/kotlin/com/visionagent/presentation/: MainActivity.kt
android/app/src/main/kotlin/com/visionagent/utils/: Logger.kt
android/app/src/main/kotlin/com/visionagent/utils/security/: EncryptionManager.kt
android/app/src/main/res/drawable/: card_background.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  splash_background.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml  data_extraction_rules.xml  file_paths.xml
android/app/src/test/kotlin/com/visionagent/: MemoryEngineTest.kt  RuleEngineTest.kt
android/app/src/test/kotlin/com/visionagent/fuzz/: FuzzTestSuite.kt
android/app/src/test/kotlin/com/visionagent/mutation/: MutationTestGuide.kt
android/gradle/: libs.versions.toml
backend/: pyproject.toml  requirements.txt
backend/src/: config.py  main.py
backend/src/api/: __init__.py  analytics_api.py  memory_api.py  ocr_api.py  routers.py  vision_api.py  websocket_api.py
backend/src/auth/: api_key.py
backend/src/cache/: redis_client.py
backend/src/db/: database.py
backend/src/monitoring/: metrics.py
backend/src/services/: vision_service.py
backend/src/tasks/: task_queue.py
backend/src/telemetry/: opentelemetry_setup.py
backend/src/utils/: logging.py
backend/tests/: test_vision_api.py
docs/: AUDIT_REPORT.md  DEEP_AUDIT_REPORT_2.md  DEEP_AUDIT_REPORT_3.md  DEEP_AUDIT_REPORT_4.md  DEEP_AUDIT_REPORT_5.md  FIXES_APPLIED.md  KEYSTORE_SETUP.md  MASTER_ARCHITECTURE.md
docs/adr/: ADR-001-technology-choices.md
docs/runbooks/: INCIDENT_RUNBOOK.md
quality/detekt/: detekt.yml
quality/lint/: .editorconfig
rust_engine/: Cargo.toml  rustfmt.toml
rust_engine/src/: frame_pipeline.rs  jni_exports.rs  lib.rs  metrics.rs  perf_monitor.rs  rule_cache.rs  session_tracker.rs  state_manager.rs
scripts/: build_tesseract_android.sh  generate_keystore.sh
scripts/ci/: run_monkey_test.sh  verify_apk.sh
scripts/profiling/: run_perfetto.sh  run_simpleperf.sh
scripts/sanitizers/: run_asan_build.sh  run_ubsan_tsan.sh
(+19 files in other folders)
