# ============================================================
# pyproject.toml — Vision Agent Backend
# Ruff, mypy, and project configuration
# FIX RUFF-1: Central config avoids CLI flag version incompatibilities
# ============================================================

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git", ".venv", "__pycache__", "dist", "build",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in default args (FastAPI pattern)
    "UP007",  # X | Y union syntax (Python 3.9 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
warn_return_any = true
warn_unused_configs = true

[project]
name = "vision-agent-backend"
version = "1.0.0"
description = "Vision Agent AI Backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
